# genai_langchain

./: .env  main.py  pyproject.toml
